<resources>
    <string name="app_name">Schooglink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_name">Rishi</string>
    <string name="overview">Overview</string>
    <string name="dashboard">Dashboard</string>
    <string name="good_morning">Good morning</string>
    <string name="links">Links</string>
    <string name="profile">Profile</string>
    <string name="campaigns">Campaigns</string>
    <string name="courses">Courses</string>
    <string name="view_analytics">View Analytics</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="view_all_links">View all Links</string>
    <string name="clicks">Clicks</string>
    <string name="sample_link">https://samplelink.oia.bio/ashd</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="_22_aug_23_sep">22 Aug - 23 Sep</string>
    <string name="link_details">Link Details</string>
    <string name="date">Date</string>
    <string name="link">Link</string>
    <string name="open_link">Open Link</string>
    <string name="search_title">Search title...</string>
</resources>