<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_white_top_curved">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/img_logo_sample"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivLogo"
            android:layout_alignTop="@id/ivLogo"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="6dp"
            android:text="@string/sample_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_toStartOf="@id/tvClicks"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree"
            android:text="@string/good_morning"
            android:layout_marginTop="6dp"
            android:layout_alignStart="@id/tvTitle"
            android:layout_below="@id/tvTitle"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvClicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/ivLogo"
            android:fontFamily="@font/figtree"
            android:textStyle="bold"
            android:text="@string/sample_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tvClicksLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree"
            android:text="@string/clicks"
            android:layout_marginTop="6dp"
            android:layout_alignEnd="@id/tvClicks"
            android:layout_below="@id/tvClicks"
            android:textColor="@color/grey"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_blue_dashed_stroke">
        <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree"
            android:layout_toStartOf="@id/ibCopy"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/sample_link"
            android:textColor="@color/bluePrimary"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibCopy"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/img_copy"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>