<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluePrimary"
    tools:context=".view.activity.DetailsActivity">
    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluePrimary"
        android:paddingVertical="40dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/ibSettings"
            android:layout_alignParentStart="true"
            android:text="@string/link_details"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/img_settings"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_card_grey_top_curved"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/img_logo_sample"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivLogo"
            android:layout_alignTop="@id/ivLogo"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="6dp"
            android:text="@string/sample_name"
            android:textStyle="bold"
            android:layout_alignBottom="@id/ivLogo"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="20sp"
            android:layout_marginEnd="25dp"/>

        <TextView
            android:id="@+id/tvClicksLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/ivLogo"
            android:layout_alignEnd="@id/ivLogo"
            android:layout_below="@id/ivLogo"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="20dp"
            android:text="@string/clicks"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvClicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivLogo"
            android:layout_below="@id/ivLogo"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="20dp"
            android:text="@string/clicks"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/ivLogo"
            android:layout_alignEnd="@id/ivLogo"
            android:layout_below="@id/tvClicksLabel"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivLogo"
            android:layout_below="@id/tvClicksLabel"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvLinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/ivLogo"
            android:layout_alignEnd="@id/ivLogo"
            android:layout_below="@id/tvDateLabel"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="10dp"
            android:text="@string/link"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivLogo"
            android:layout_below="@id/tvDateLabel"
            android:fontFamily="@font/figtree"
            android:layout_marginTop="10dp"
            android:text="@string/link"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/tvLinkLabel"
            android:layout_margin="25dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/bluePrimary"
                android:elevation="5dp"
                android:layout_marginVertical="10dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:background="@drawable/bg_circle_white"
                android:layout_marginHorizontal="7dp"
                android:padding="15dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOpenLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_link"
                android:textAllCaps="false"
                android:elevation="5dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="7dp"
                android:background="@drawable/bg_btn_blue_curved"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>