<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_grey">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llAddNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="1dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibAddNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_circle_white"
            android:src="@drawable/img_add"
            android:layout_alignParentEnd="true"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:padding="8dp"
        android:gravity="bottom"
        android:layout_alignBottom="@id/llAddNew"
        android:orientation="horizontal"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLinks"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/selector_links"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tvLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/figtree"
                android:textStyle="bold"
                android:text="@string/links"
                android:textColor="@color/black"
                android:textSize="12sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCourses"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/selector_books"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tvCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/figtree"
                android:textStyle="bold"
                android:text="@string/courses"
                android:textColor="@color/grey"
                android:textSize="12sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCampaigns"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibCampaigns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/selector_campaigns"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tvCampaigns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/figtree"
                android:textStyle="bold"
                android:text="@string/campaigns"
                android:textColor="@color/grey"
                android:textSize="12sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llProfile"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/selector_profile"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/figtree"
                android:textStyle="bold"
                android:text="@string/profile"
                android:textColor="@color/grey"
                android:textSize="12sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>